Version 1.2 - Fixed images from not showing

--- a/resources/main.sass
+++ b/resources/main.sass
@@ -572,14 +572,14 @@
                             @extend %link-style-2
                     .first-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-orientation.jpg")
+                            content: url("resources/capstone_colmar_assets/images/information-orientation.jpg")
                             height: $card-2-right-side-img-height
                             width: $card-2-right-side-img-width
                             margin-left: $card-2-right-side-img-margin-top-left
                             @extend %mini-first-image-2
                     .second-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-campus.jpg")
+                            content: url("resources/capstone_colmar_assets/images/information-campus.jpg")
                             height: $card-2-right-side-img-height
                             width: $card-2-right-side-img-width
                             margin-left: $card-2-right-side-img-margin-top-left
@@ -587,7 +587,7 @@
                             @extend %mini-second-image-2
                     .last-image
                         img
-                            content: url("/resources/capstone_colmar_assets/images/information-guest-lecture.jpg")
+                            content: url("resources/capstone_colmar_assets/images/information-guest-lecture.jpg")
                             height: $card-2-right-side-img-height
                             width: $card-2-right-side-img-width
                             margin-left: $card-2-right-side-img-margin-top-left
